--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,11 @@ body {
   background-color: #f5f6fa;
 }
 
+#root {
+  width: 100%;
+  min-height: 100vh;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
